[package]
name = "elnyan-rs"
version = "0.1.0"
authors = ["Jisu Kim <vbalien@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
tokio = "0.2.0-alpha.6"
futures-preview = "=0.3.0-alpha.19"
regex = "1"
async-trait = "0.1.21"
rand = "0.7.2"